[metadata]
name = shell-scripter
version = 0.0.1
author = Zac Wilson
description = A shell scripting library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZacJW/shell-scripter
project_urls =
    Bug Tracker = https://github.com/ZacJW/shell-scripter/issues
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src